# Betting-Expert-Advisor-System

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .replit  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  Dockerfile.scheduler  LICENSE  Makefile  PHASE_1_DELIVERY_REPORT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_UPGRADE_REPORT.md  README.md  SOCIAL_SIGNALS_IMPLEMENTATION.md  betting-advisor.service  coverage.xml  demo.py  diagnose_betting.py  docker-compose.prod.yml  docker-compose.yml  docker-logs.sh  docker-rebuild.sh  docker-start.sh  docker-stop.sh  live_opportunities.json  ml_demo.py  nginx.conf  patch_live_tracker.py  pyproject.toml  pytest.ini  replit.md  requirements-dev.txt  requirements.lock.txt  requirements.txt  summary.txt  test_betting_now.py
attached_assets/: Pasted--AGENT-PROMPT-Take-Betting-Expert-Advisor-to-Production-Add-UI-You-are-an-autonomous-engineeri-1763119117129_1763119117131.txt  Pasted--FULL-END-TO-END-REPLIT-AGENT-PROMPT-Paste-everything-below-into-Replit-Agent-REPLIT-AGENT-FUL-1763121383409_1763121383410.txt  Pasted--MASTER-AGENT-PROMPT-FULL-PRODUCTION-UPGRADE-UI-BUILD-You-are-the-development-agent-responsibl-1763118612905_1763118612907.txt  Pasted-Understood-addressing-you-exactly-as-if-issuing-instructions-directly-to-the-agent-Ta-1763073368658_1763073368660.txt
data/: safety_state.json
docs/: AUTOMATION_GUIDE.md  CACHE_STATUS.md  CACHING_GUIDE.md  CLEANUP_COMPLETED.md  CODEBASE_INSPECTION_REPORT.md  COMMANDS.md  CONTRIBUTING.md  DAEMON_SETUP_GUIDE.md  DATABASE_SETUP.md  DOCUMENTATION_INDEX.md  ENHANCEMENTS.md  FINAL_COVERAGE_SUMMARY.md  HARDCODED_PATHS_CLEANUP.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  ML_TRAINING_FIXED.md  MODEL_PERFORMANCE_ANALYSIS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  REAL_DATA_RESULTS.md  SKIPPED_TESTS_RESOLUTION.md  SOCIAL_SIGNALS.md  SYSTEM_TEST_RESULTS.md  WEEK1_COMPLETE.md
(+2198 files in other folders)
